--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,11 +7,13 @@ html(lang='en')
     script(src='bower_components/jquery/dist/jquery.min.js',type='text/javascript')
     script(src='bower_components/angular/angular.js',type='text/javascript')
     script(src='bower_components/angular-ui-router/release/angular-ui-router.min.js',type='text/javascript')
+    script(src='bower_components/angular-notify/dist/angular-notify.min.js',type='text/javascript')
     script(src='bower_components/bootstrap/dist/js/bootstrap.min.js',type='text/javascript')
     script(src='services/services.js' , type='text/javascript')
     script(src='controllers/controllers.js' , type='text/javascript')
     script(src='app.js' , type='text/javascript')
     link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='bower_components/angular-notify/dist/angular-notify.min.css')
     link(rel='stylesheet', href='assets/css/style.css')
   body
     block content
